<resources>
    <string name="app_name">ZuHauseLernen</string>
    <!-- Light mode-->
    <string name="text">Light Mode</string>
    <string name="advertisement">Hast du Lust auf Spielen, druck mal hier</string>
    <string name="homePhoto">TODO</string>
    <string name="homeLogo">TODO</string>
    <string name="appName">ZuHause\nLernen</string>
    <string name="logIn">Button</string>
    <string name="anmelden">Anmelden</string>
    <string name="registrieren">Registrieren</string>
    <string name="ausloggen">Ausloggen</string>
    <string name="appLogo">TODO</string>
    <string name="firstNameLabel">Vorname:</string>
    <string name="firstName">Vorname</string>
    <string name="lastNameLabel">Nachname:</string>
    <string name="lastName">Nachname</string>
    <string name="eMailLabel">e-Mail Adresse:</string>
    <string name="eMailAdress">e-Mail Adresse</string>
    <string name="passwordLabel">Kennwort:</string>
    <string name="password">Kennwort</string>
    <string name="passRepeatLabel">Kennwort wiederholen:</string>
    <string name="confirm">Bestätigen</string>
    <string name="passRepeat">Kennwort_wiederholen</string>
    <string name="mit_e_mail_registrieren">Weiter mit e-Mail</string>
    <string name="mit_facebook_registrieren">Weiter bei Facebook</string>
    <string name="mit_Apple_ID_registrieren">Weiter bei Apple ID</string>
    <string name="mit_Gmail_registrieren">Weiter bei Google</string>
    <string name="registrierenMenu">Registrierung</string>
    <string name="einloggen">Einloggen</string>
    <string name="mainLogout">Ausloggen</string>
    <string name="register_menu"></string>
    <string name="login">Einloggen</string>
    <string name="notice">Notice</string>
    <string name="chooseSubjectsNote">Sie können zwei Fächer kostenlos auswählen, wenn Sie mehr als zwei Fächer auswählen möchten,sollten Sie dafür abonnieren.</string>
    <string name="addSubjects">Hinzufügen</string>
    <string name="subscription">Abonnement</string>
    <string name="subscribe">Abonnieren</string>
    <string name="chooseSubjects">Die gewünschte Fächer auswählen</string>
    <string name="subjectImage" />
    <string name="test" />
    <string name="setting">Einstellungen</string>

    <string name="subjectTitel_1">Deutsch</string>
    <string name="subjectTitel_2">Englisch</string>
    <string name="subjectTitel_3">Französisch</string>
    <string name="subjectTitel_4">Spanisch</string>
    <string name="subjectTitel_5">Biologie</string>
    <string name="subjectTitel_6">Chemie</string>
    <string name="subjectTitel_7">Physik</string>
    <string name="subjectTitel_8">Mathe</string>
    <string name="subjectTitel_9">Informatik</string>
    <string name="subjectTitel_10">Technik</string>
    <string name="subjectTitel_11">Ethik</string>
    <string name="subjectTitel_12">Philosophie</string>
    <string name="subjectTitel_13">Geographie</string>
    <string name="subjectTitel_14">Musik</string>
    <string name="subjectTitel_15">NW</string>
    <string name="credit_card">Kreditkarte</string>
    <string name="klarna">Klarna Bank</string>
    <string name="bank_account">Bankkonto</string>
    <string name="bill">Auf Rechnung</string>
    <string name="paypal">PayPal</string>
    <string name="forward">Weiter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="backEmail">TODO</string>
    <string name="back_setting">TODO</string>
    <string name="subjects">Fächer</string>
    <string name="invalidInput">"Fehlermeldung:\n%1$s"</string>
    <string name="validInput">"Vielen Dank für Ihre Teilnahme an unserer Umfrage:\n* Vorname: %1$s.\n* Nachname: %2$s\n* Geschlecht: %3$s\n* Lieblingstiere: %4$s"</string>
    <string name="passwordTipp">"Das Kennwort muss:\n"
                    "* mind.8 Zeichen\n"
                    "* mind.1 kleine Buchstabe\n"
                    "* mind.1 größe Buchstabe\n"
                    "* mind.1 Zahl\n"
                    "* keine Symbole"</string>
    <string name="passwordMatching">Die Kennwörter stimmen nicht überein. </string>
    <string name="swipe_left_or_right">Swipe nach links oder rechts</string>
    <string name="reload_games">Games neu laden</string>
    <string name="click_here_to_load_games">Klick hier um die Games zu laden</string>
    <string name="_128190">💾</string>
    <string name="_10060">❌</string>
    <string name="gameImage">TODO</string>
    <string name="api_title">Discover the best free-to-play games!</string>
    <string name="go_back">go_back</string>
    <string name="chooseLand">Land</string>
    <string name="chooseCity">Stadt</string>
    <string name="chooseReason">Wofür?</string>
    <string name="chooseSchool">Schule?</string>
    <string name="chooseClass">Klassenstufe?</string>
    <string name="emailSettingSection">TextView</string>
    <string name="subscription_notice">Wählen Sie die Fächer und Zahlungsmethode aus</string>
    <string name="paymentImage">paymentImage</string>
    <string name="category_1_1">Videos</string>
    <string name="categoryExplain_1_1">Motiviert lernen</string>
    <string name="category_1_2">Übungen</string>
    <string name="categoryExplain_1_2">Selbstständig wiederholen</string>
    <string name="category_1_3">Lernspiel</string>
    <string name="categoryExplain_1_3">Spielend üben</string>
    <string name="category_1_4">Vokabeltrainer</string>
    <string name="categoryExplain_1_4">Einfach merken</string>
    <string name="category_1_5">Chat</string>
    <string name="categoryExplain_1_5">Jederzeit fragen</string>
    <string name="category_1_6">Arbeitsblätter</string>
    <string name="categoryExplain_1_6">Optimal vorbereiten</string>
    <string name="categoryImage">TODO</string>
    <item name="light_mode" type="id" />
    <string name="cardOwner">Inhaber der Karte</string>
    <string name="cardNumber">Kartennummer</string>
    <string name="cardExpiryDate">Abluafsdatum</string>
    <string name="cardSecurityCode">Sicherheitscode</string>
    <string name="payment">Zahlung</string>
    <string name="emailLogin">Mit e-mail einloggen</string>
    <string name="gmailLogin">Mit G-mail einloggen</string>
    <string name="appleLogin">Mit Apple-Id einloggen</string>
    <string name="emailLogInHint">example@example.com</string>
    <string name="gmailLogInHint">example@gmail.com</string>
    <string name="facebookLogInHint">facebook user name</string>
    <string name="appleIdLogInHint">example@icloud.com</string>
    <string name="mySubjects">Meine Fächer</string>
    <string name="userSetting">Profil Einstellungen</string>
    <string name="userAdress">Adresse</string>
    <string name="newUser">Neues Konto erstellen</string>
    <string name="meine_rechnungen">Meine Rechnungen</string>
    <string name="cancel">TODO</string>
    <string name="accountLogin">Mit Konto einloggen</string>
    <string name="card_expiry_date">Datum des Ablaufs</string>
    <string name="payment_image">TODO</string>
    <string name="card_number">Die Kartennummer</string>
    <string name="card_owner">Der Name des Inhabers</string>
    <string name="security_code">Drei stellige Zahl</string>
    <string name="user_e_mail_payment">User e-mail</string>
    <string name="user_email_subscription">TextView</string>
    <string name="subject_subtotal_label_user_subscription">Gesamter Betrag:</string>
    <string name="subjects_subtotal_user_subscription">Subtotal</string>
</resources>