<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        tools:context=".ui.EmailFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_toolbarTitelEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/newUser"
                android:textColor="@color/buttonsTextColor"
                android:textSize="15sp"
                android:textStyle="normal"
                tools:ignore="RtlHardcoded,TextContrastCheck"
                />
            <ImageView
                android:id="@+id/iv_back_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_arrow_back_ios_24"
                android:layout_gravity="start"
                android:layout_marginStart="8dp"
                tools:layout_editor_absoluteX="6dp"
                android:contentDescription="@string/backEmail"
                app:tint="@color/buttonsTextColor" />
        </androidx.appcompat.widget.Toolbar>
        <ImageView
            android:id="@+id/appLogoEmail"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/homeLogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:srcCompat="@drawable/homelogo"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/firstNameLabelOriginal"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/firstNameLabel"
            android:textColor="#FAF9F9"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/appLogoEmail"
            app:layout_constraintStart_toStartOf="@+id/appLogoEmail"
            app:layout_constraintTop_toBottomOf="@+id/appLogoEmail"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/firstName"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/firstName"
            android:textSize="15sp"
            android:fontFamily="@font/noto_sans"
            android:inputType="text"
            android:textColor="@color/buttonsTextColor"
            app:layout_constraintEnd_toEndOf="@+id/firstNameLabelOriginal"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/firstNameLabelOriginal"
            app:layout_constraintTop_toBottomOf="@+id/firstNameLabelOriginal"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/lastNameLabelOriginal"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/lastNameLabel"
            android:textColor="#FBFBFB"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/firstName"
            app:layout_constraintStart_toStartOf="@+id/firstName"
            app:layout_constraintTop_toBottomOf="@+id/firstName"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/lastName"
            android:inputType="text"
            android:minHeight="48dp"
            android:textSize="15sp"
            android:fontFamily="@font/noto_sans"
            android:textColor="@color/buttonsTextColor"
            app:layout_constraintEnd_toEndOf="@+id/lastNameLabelOriginal"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/lastNameLabelOriginal"
            app:layout_constraintTop_toBottomOf="@+id/lastNameLabelOriginal"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/eMailLabelOriginal"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/eMailLabel"
            android:textColor="#F8F6F6"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/lastName"
            app:layout_constraintStart_toStartOf="@+id/lastName"
            app:layout_constraintTop_toBottomOf="@+id/lastName"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/eMailAdresse"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/eMailAdress"
            android:inputType="textEmailAddress"
            android:textColor="@color/buttonsTextColor"
            android:textSize="15sp"
            android:fontFamily="@font/noto_sans"
            app:layout_constraintEnd_toEndOf="@+id/eMailLabelOriginal"
            app:layout_constraintStart_toStartOf="@+id/eMailLabelOriginal"
            app:layout_constraintTop_toBottomOf="@+id/eMailLabelOriginal"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/passwordLabelOriginal"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/passwordLabel"
            android:textColor="#FDFCFC"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/eMailAdresse"
            app:layout_constraintStart_toStartOf="@+id/eMailAdresse"
            app:layout_constraintTop_toBottomOf="@+id/eMailAdresse"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/buttonsTextColor"
            android:textSize="15sp"
            android:fontFamily="@font/noto_sans"
            app:layout_constraintEnd_toEndOf="@+id/passwordLabelOriginal"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/passwordLabelOriginal"
            app:layout_constraintTop_toBottomOf="@+id/passwordLabelOriginal"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/passwordRepeatLabelOriginal"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/passRepeatLabel"
            android:textColor="#FAF8F8"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toBottomOf="@+id/password"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/passwordRepeat"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="@string/passRepeat"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/buttonsTextColor"
            android:textSize="15sp"
            android:fontFamily="@font/noto_sans"
            app:layout_constraintEnd_toEndOf="@+id/passwordRepeatLabelOriginal"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/passwordRepeatLabelOriginal"
            app:layout_constraintTop_toBottomOf="@+id/passwordRepeatLabelOriginal"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirmEmail"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/buttons"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@color/buttonsTextColorTwo"
            android:textSize="16sp"
            app:cornerRadius="10dp"
            android:fontFamily="@font/noto_sans"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
            app:layout_constraintEnd_toEndOf="@+id/passwordRepeat"
            app:layout_constraintStart_toStartOf="@+id/passwordRepeat"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:background="@color/toolbar"
            app:itemIconTint="@color/buttonsTextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/bottom_navigation_2"
            tools:ignore="VisualLintBottomNav">

        </com.google.android.material.bottomnavigation.BottomNavigationView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>